--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <body>
         <header id="navigation">
             <nav id="header">
-                <a href="index.html"><img src="trafore-logo.png" alt="logotrafore" class="logo-img"></a>
+                <a href="index.html"><img src="images/trafore-logo.png" alt="logotrafore" class="logo-img"></a>
                 <div class="nav-lang">
                     <ul class="nav-links">
                         <li><a href="#header">News</a></li>
@@ -74,19 +74,19 @@
             <div class="agile-exp">
                 <div class="col-1">
                     <i class="fa fa-smile-o"></i>
-                    <p class="col-text">Individual and interactions more than processes and tools.</p>
+                    <p class="col-text">Individual and interactions over processes and tools.</p>
                 </div>
                 <div class="col-2">
                     <i class="fa fa-check-square-o"></i>
-                    <p class="col-text">A functional application more than comprehensive documentation.</p>
+                    <p class="col-text">A functional application over comprehensive documentation.</p>
                 </div>
                 <div class="col-3">
                     <i class="fa fa-group"></i>
-                    <p class="col-text">Customer collaboration more than contract negotiations.</p>
+                    <p class="col-text">Customer collaboration over contract negotiations.</p>
                 </div>
                 <div class="col-4">
                     <i class="fa fa-line-chart"></i>
-                    <p class="col-text">Responding to change more than following a plan.</p>
+                    <p class="col-text">Responding to change over following a plan.</p>
                 </div>
             </div>
         </section>
@@ -110,7 +110,7 @@
                     <button class="babe-btn" href="" target="_blank"><span>LEARN MORE</span></button>
                 </div>
                 <div class="babe-img">
-                    <img src="smiley-sperm.jpg" alt="babe-photo" height="180px" width="181px">
+                    <img src="images/smiley-sperm.jpg" alt="babe-photo" height="180px" width="181px">
                 </div>
             </div>
             <div id="webdev">
@@ -120,7 +120,7 @@
                     <button class="webdev-btn" href="https://us.4d.com/why-4d" target="_blank"><span>LEARN MORE</span></button>
                 </div>
                 <div class="webdev-img">
-                    <img src="website-development-icon.jpg" alt="4d-image" width="224px" class="webdev-img">
+                    <img src="images/website-development-icon.png" alt="4d-image" width="224px" class="webdev-img">
                 </div>
             </div>
         </section>
@@ -129,7 +129,7 @@
         <section id="footer">
             <div class="footer-row">
             <div class="column1">
-                <img src="trafore-logo.png" alt="trafore_logo">
+                <img src="images/trafore-logo.png" alt="trafore_logo">
                 <p>ville.ranta@trafore.fi <br>
                     Arkadiankatu 7, 00110 Helsinki, Finland <br>
                     Y-tunnus: 2143316-3
