new pages uploaded
terms of use, cookie policy, new style added, new links added

--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -4,12 +4,12 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3" />
         <link rel="stylesheet" href="stylesheet.css" />
-        <link rel="stylesheet" href="contactstyle.css" />
+        <link rel="stylesheet" href="txtfile-style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Contact information</title>
+        <title>Terms of use - Trafore Oy</title>
     </head>
     <body>
         <header id="navigation">
@@ -42,49 +42,25 @@
                     <span class="bar"></span>
 
                 </div>
-                <!-- <div>
-                    <button type="submit"><i class="fa fa-search"></i></button>
-                    <div id="searchOutput"></div>
-                </div> -->
-            </nav>
-        </header>
-    
-    <!-- contact form -->
-    <div class="section">
-        <div class="wrapper">
-            <div class="row">
-                <div class="col1">
-                    <div class="exim-ukko">
-                        <img src="images/exim_smile.gif" alt="exim-image" class="exim-ukko">
-                    </div>
-                </div>
-                <div class="col2"></div>
-                <div class="col3">
-                    <div class="contact-form">
-                        <div class="margin-bottom">
-                            <h2 class="heading-2">Send us a message</h2>
-                        </div>
-                        <div class="form">
-                            <form name="contact-form" data="Contact Form" method="POST" class="form-2" aria-label="Contact Form" id="contact-form">
-                                <input type="text" class="form-field" maxlength="256" name="Name" data-name="Name" placeholder="Name*" id="name" required>
-                                <input type="email" class="form-field" maxlength="256" name="Email" data-name="Email" placeholder="Email*" id="email"  required>
-                                <input type="text" class="form-field" maxlength="256" name="Company" data-name="Company" placeholder="Organisation*" id="company" required>
-                                <input type="text" class="form-field" maxlength="256" name="Role" data-name="Role" placeholder="Your position*" id="role" required>
-                                <input type="text" class="form-field" maxlength="256" name="How-did-you-hear-about-Trafore" data-name="How did you hear about Trafore" placeholder="How did you hear about Trafore?" id="howyouhear">
-                                <textarea class="form-field" placeholder="Your message*" maxlength="5000" id="message" required></textarea>
-                                <p style="color: red; font-style: italic; font-size: 11px;">* required fields</p>
-                            </form>
-                            <button value="Send Message" class="submit-button" onclick="submitForm()">Send Message</button>
-                            <div class="success" id="success">Your message has been sent succesfully!</div>
-                            <div class="fail" id="fail">Please fill in required fields</div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <!--footer starts here-->
+        </nav>
+<!-- main content starts here -->
+    <main>
+        <header><h1>Terms of use</h1></header>
+        <h3>Use of our site requires that you agree to abide by any terms and conditions set forth in this notice and each service.</h3>
+        <ol type="1">
+            <li>All material on our site is published without warranty as to its availability, accuracy, reliability, content or any other feature. The suitability of the material for any particular purpose is not guaranteed, nor is it guaranteed in terms of the inviolability of property rights or the rights of third parties.</li><br>
+            <li>Subject to applicable law, we will not be liable for any damages arising out of the use or obstruction of our pages or electronic services or for any other related reason.</li><br>
+            <li>The content of our pages, including trademarks, trademarks, trade marks, etc., is the property of Trafore or a third party and is protected by copyright and other laws. Except as expressly provided below, all rights to our pages and their content are reserved. No part of this site may be copied, retransmitted, reposted, duplicated or otherwise used for any purpose without the prior written permission of the user.</li><br>
+            <li>Use of the pages and their content is permitted only for private, non-commercial purposes. Press releases and other documents to be published and made public may also be used for other purposes, provided that their source is clearly indicated.</li><br>
+            <li>You represent and warrant that you will not post any illegal or inappropriate material on our site. By submitting material to our site, the user grants Trafore the unrestricted right to use it free of charge and without any obligation to the user. The user must take all reasonable steps to ensure that the material submitted is free of viruses or otherwise harmful.</li><br>
+            <li>Use of other pages that may be linked from our pages is subject to the terms of use of those pages. We cannot influence the content of such pages and do not take any responsibility for these pages. Unless expressly stated otherwise, we do not endorse or otherwise endorse the use of these pages or their owners, operators, content or anything else related to them.</li><br>
+            <li>We reserve the right at any time without notice and for any reason to change the terms of use, appearance, content, availability of the pages and the services and goods or other features of the pages provided on them.</li><br>
+            <li>Purchasing services or goods other than those provided free of charge from our site requires at least 18 years of age or the written permission of a parent or other guardian.</li><br>
+            <li>Separate terms of use may apply to certain services.</li><br>
+            <li>Finnish law applies to the terms of use of our website and <a href="cookies.html">cookie policies</a> .</li><br>
+        </ol>
+    </main>
+<!--Footer starts here-->
     <footer>
         <section id="footer">
             <div class="footer-row">
@@ -112,7 +88,7 @@
             <div class="column3">
                 <ul class="col-service">
                     <li class="column-title">IT-Services</li>
-                    <li class="col-links"><a href="#">Babe Fertility Software</a></li>
+                    <li class="col-links"><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
                     <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                     <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                 </ul>
@@ -125,7 +101,6 @@
         </section>
         </footer>
         <script src="homepage.js"></script>
-        <script src="contact.js"></script>
-        <script src="https://smtpjs.com/v3/smtp.js"></script>
+
     </body>
-</html>
+    </html>
