--- a/aboutus.html
+++ b/aboutus.html
@@ -14,7 +14,7 @@
     <body>
         <header id="navigation">
             <nav id="header">
-                <a href="index.html"><img src="trafore-logo.png" alt="logotrafore" class="logo-img"></a>
+                <a href="index.html"><img src="images/trafore-logo.png" alt="logotrafore" class="logo-img"></a>
                 <div class="nav-lang">
                     <ul class="nav-links">
                         <li><a href="trafore.html">News</a></li>
@@ -63,7 +63,7 @@
 
         </div>
         <div class="ville-fb">
-            <img src="quotation-mark.png" alt="quotation-mark" class="quote-mark">
+            <img src="images/quotation-mark.png" alt="quotation-mark" class="quote-mark">
             <p>In the Agile Manifesto, software developers promote the method of customer collaboration so well it was reason enough to be the very first contract I signed in the process of founding Trafore Oy in 2007. Extensive paperwork and heavy contract models can and should always be minimized. <br>
             - <em>Ville H.S Ranta</em></p>
         </div>
@@ -97,7 +97,7 @@
             <section id="footer">
                 <div class="footer-row">
                 <div class="column1">
-                    <img src="trafore-logo.png" alt="trafore_logo">
+                    <img src="images/trafore-logo.png" alt="trafore_logo">
                     <p>ville.ranta@trafore.fi <br>
                         Arkadiankatu 7, 00110 Helsinki, Finland <br>
                         Y-tunnus: 2143316-3
@@ -110,11 +110,10 @@
     
                 <div class="column2">
                     <ul class="col-company">
-                        <li class="column-title">Tietoa sivustosta</li>
-                        <li><a href="">Rekisteriseloste</a></li>
-                        <li><a href="">Tietosuojaseloste</a></li>
-                        <li><a href="">Käyttöehdot</a></li>
-                        <li><a href="">Evästeet</a></li>
+                    <li class="column-title">About the site</li>
+                    <li><a href="">Privacy policy</a></li>
+                    <li><a href="">Terms of use</a></li>
+                    <li><a href="cookies.html">Cookies policy</a></li>
                     </ul>
                 </div>
     
