--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <button class="webdev-btn" href="https://us.4d.com/why-4d" target="_blank"><span>LEARN MORE</span></button>
                 </div>
                 <div class="webdev-img">
-                    <img src="images/website-development-icon.png" alt="4d-image" width="224px" class="webdev-img">
+                    <img src="images/website-development-icon.jpg" alt="4d-image" width="224px" class="webdev-img">
                 </div>
             </div>
         </section>
@@ -142,11 +142,10 @@
 
             <div class="column2">
                 <ul class="col-company">
-                    <li class="column-title">Tietoa sivustosta</li>
-                    <li><a href="">Rekisteriseloste</a></li>
-                    <li><a href="">Tietosuojaseloste</a></li>
-                    <li><a href="">Käyttöehdot</a></li>
-                    <li><a href="">Evästeet</a></li>
+                    <li class="column-title">About the site</li>
+                    <li><a href="">Privacy policy</a></li>
+                    <li><a href="">Terms of use</a></li>
+                    <li><a href="cookies.html">Cookies policy</a></li>
                 </ul>
             </div>
 
