New picture and minor fixes

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,11 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3" />
         <link rel="stylesheet" href="stylesheet.css" />
         <link rel="stylesheet" href="aboutus.css" />
+        <link rel="icon" type="image/png" href="images/trafore-logo.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <title>Trafore Oy</title>
+        <title>About us - Trafore Oy</title>
     </head>
     <body>
         <header id="navigation">
@@ -75,7 +76,7 @@
                     <img class="avatar" src="https://media-exp1.licdn.com/dms/image/C5603AQFXld2oA8UQsw/profile-displayphoto-shrink_800_800/0/1516241846383?e=1653523200&v=beta&t=GPJfG3UItcoT0EiQga89kVwFGoE83QJvj_yeBzZNYOI" alt="ville-ranta">
                     <p><strong>Ville H.S Ranta</strong><br>
                     CEO <br></p>
-                    <a href="https://www.linkedin.com/in/ville-hs-ranta/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                    <a href="images/ville-img.jpg" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
                 </div>
                 <div class="chi">
                     <img class="avatar" src="https://media-exp1.licdn.com/dms/image/C4D03AQFoKU37GSJPnA/profile-displayphoto-shrink_800_800/0/1631625773016?e=2147483647&v=beta&t=5nexYqXVXt1rWw15ucc036CruLjUNyU1RdvW8alxr-w" alt="chi-nguyen">
@@ -112,7 +113,7 @@
                     <ul class="col-company">
                     <li class="column-title">About the site</li>
                     <li><a href="">Privacy policy</a></li>
-                    <li><a href="">Terms of use</a></li>
+                    <li><a href="terms-of-use.html">Terms of use</a></li>
                     <li><a href="cookies.html">Cookies policy</a></li>
                     </ul>
                 </div>
@@ -120,7 +121,7 @@
                 <div class="column3">
                     <ul class="col-service">
                         <li class="column-title">IT-Services</li>
-                        <li class="col-links"><a href="#">Babe Fertility Software</a></li>
+                        <li class="col-links"><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
                         <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                         <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                     </ul>
