--- a/contact.html
+++ b/contact.html
@@ -104,7 +104,7 @@
                 <ul class="col-company">
                     <li class="column-title">About the site</li>
                     <li><a href="">Privacy policy</a></li>
-                    <li><a href="">Terms of use</a></li>
+                    <li><a href="terms-of-use.html">Terms of use</a></li>
                     <li><a href="cookies.html">Cookies policy</a></li>
                 </ul>
             </div>
@@ -112,7 +112,7 @@
             <div class="column3">
                 <ul class="col-service">
                     <li class="column-title">IT-Services</li>
-                    <li class="col-links"><a href="#">Babe Fertility Software</a></li>
+                    <li class="col-links"><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
                     <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                     <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                 </ul>
