--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <ul class="col-company">
                     <li class="column-title">About the site</li>
                     <li><a href="">Privacy policy</a></li>
-                    <li><a href="">Terms of use</a></li>
+                    <li><a href="terms-of-use.html">Terms of use</a></li>
                     <li><a href="cookies.html">Cookies policy</a></li>
                 </ul>
             </div>
