--- a/babefertilitysoftware.html
+++ b/babefertilitysoftware.html
@@ -5,6 +5,7 @@
   <title>Babe Fertility Software</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="description" content="Babe Fertility Software">
+  <link rel="icon" type="image/png" href="images/babe-favicon.png">
   <meta name="keywords" content="fertility treatment, medical software">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
