fix profile pictures

--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3" />
         <link rel="stylesheet" href="stylesheet.css" />
         <link rel="stylesheet" href="aboutus.css" />
-        <link rel="icon" type="image/png" href="images/trafore-logo.png">
+        <link rel="icon" type="image/png" href="images/trafore-favicon.png">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -73,13 +73,13 @@
             <h2>Our team</h2>
             <div class="employees">
                 <div class="ville">
-                    <img class="avatar" src="https://media-exp1.licdn.com/dms/image/C5603AQFXld2oA8UQsw/profile-displayphoto-shrink_800_800/0/1516241846383?e=1653523200&v=beta&t=GPJfG3UItcoT0EiQga89kVwFGoE83QJvj_yeBzZNYOI" alt="ville-ranta">
+                    <img class="avatar" src="images/ville-img.jpg" alt="ville-ranta">
                     <p><strong>Ville H.S Ranta</strong><br>
                     CEO <br></p>
                     <a href="images/ville-img.jpg" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
                 </div>
                 <div class="chi">
-                    <img class="avatar" src="https://media-exp1.licdn.com/dms/image/C4D03AQFoKU37GSJPnA/profile-displayphoto-shrink_800_800/0/1631625773016?e=2147483647&v=beta&t=5nexYqXVXt1rWw15ucc036CruLjUNyU1RdvW8alxr-w" alt="chi-nguyen">
+                    <img class="avatar" src="images/chi-img.jpeg" alt="chi-nguyen">
                     <p><strong>Chi Nguyen</strong><br>
                     IT & Invoicing Assistant</p>
                     <a href="https://www.linkedin.com/in/chinguyenlinh98/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
