--- a/babefertilitysoftware.html
+++ b/babefertilitysoftware.html
@@ -15,15 +15,18 @@
 
 <body>
     <!--logo, nav and header-->
-        <img src="babe-logo.jpg" alt="babe-logo" class="logo">
+    <div class="navigation">
+        <img src="images/babe-logo.png" alt="babe-logo" class="logo">
         <nav class="nav-bar"> 
             <ul>
                 <li><a href="">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="">Features</a></li>
+                <li><a href="">Product</a></li>
+                <li><a href="">News</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
+    </div>
+
     <!--header starts here-->
         <div id="container">
             <div class="background-img">
