--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
                     <ul class="nav-links">
                         <li><a href="#header">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
-                        <li><a class="services" href="#products">IT-Services</a>
+                        <li><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
-                                <li><a href="">Babe Fertility Software</a></li>
+                                <li><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                                 <li><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                             </ul>
-                        </li>
+                        </li> 
                         <li><a href="contact.html">Contact</a></li>
                         <li>
                             <ul class="lang">
@@ -79,7 +79,7 @@
                 <div class="col-2">
                     <i class="fa fa-check-square-o"></i>
                     <p class="col-text">A functional application over comprehensive documentation.</p>
-                </div>
+                </div> 
                 <div class="col-3">
                     <i class="fa fa-group"></i>
                     <p class="col-text">Customer collaboration over contract negotiations.</p>
