--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
                     <ul class="nav-links">
                         <li><a href="#header">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
-                        <li><button class="services"><strong>IT-Services</strong></button>
+                        <li class="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
-                                <li><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
+                                <li><a href="babefertilitysoftware.html">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
-                                <li><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
+                                <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
                             </ul>
                         </li> 
-                        <li><a href="contact.html">Contact</a></li>
+                        <li class="contact-link"><a href="contact.html">Contact</a></li>
                         <li>
                             <ul class="lang">
                                 <li><a href="#" class="suomi">FI</a></li>
