--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
         <link rel="stylesheet" href="stylesheet.css" />
         <link rel="stylesheet" href="contactstyle.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -17,7 +18,7 @@
                 <a href="index.html"><img src="images/trafore-logo.png" alt="logotrafore" class="logo-img"></a>
                 <div class="nav-lang">
                     <ul class="nav-links">
-                        <li><a href="#header">News</a></li>
+                        <li><a class="" href="#header">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
                         <li><a class="services">IT-Services</a>
                             <ul class="dropdown">
