--- a/aboutus.html
+++ b/aboutus.html
@@ -20,13 +20,13 @@
                     <ul class="nav-links">
                         <li><a href="trafore.html">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
-                        <li><a class="services">IT-Services</a>
+                        <li class="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
-                                <li><a href="babefertilitysoftware.html" target="_blank">Babe Fertility Software</a></li>
+                                <li><a href="babefertilitysoftware.html">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
-                                <li><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
+                                <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
                             </ul>
-                        </li>
+                        </li> 
                         <li><a href="contact.html">Contact</a></li>
                         <li>
                             <ul class="lang">
