--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
                     <ul class="nav-links">
                         <li><a href="#header">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
-                        <li class="vertical-list"><button class="services"><strong>IT-Services</strong></button>
-                            <ul class="dropdown">
+                        <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
+                        <ul class="dropdown">
                                 <li><a href="babefertilitysoftware.html">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                                 <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
-                            </ul>
+                            </ul> 
                         </li> 
                         <li class="contact-link"><a href="contact.html">Contact</a></li>
                         <li>
