change class to id

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                     <ul class="nav-links">
                         <li><a class="" href="#header">News</a></li>
                         <li><a href="aboutus.html">About us</a></li>
-                        <li class="vertical-list"><button class="services"><strong>IT-Services</strong></button>
+                        <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
                                 <li><a href="babefertilitysoftware.html">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
