--- a/aboutus.html
+++ b/aboutus.html
@@ -18,7 +18,7 @@
                 <a href="index.html"><img src="images/trafore-logo.png" alt="logotrafore" class="logo-img"></a>
                 <div class="nav-lang">
                     <ul class="nav-links">
-                        <li><a href="trafore.html">News</a></li>
+                        <li><a href="index.html">Home</a></li>
                         <li><a href="aboutus.html">About us</a></li>
                         <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
