--- a/aboutus.html
+++ b/aboutus.html
@@ -88,7 +88,7 @@
                     <img class="avatar" src="https://media-exp1.licdn.com/dms/image/C4D03AQGBcVn0HTPL7g/profile-displayphoto-shrink_800_800/0/1639121815247?e=1653523200&v=beta&t=YARDqb_hYnuB_2YFxJZflIfbNGCjBh3fo20yhp5lEok" alt="dylan-nguyen">
                     <p><strong>Dylan Nguyen</strong><br>
                     Data Engineer</p>
-                    <a href="https://www.linkedin.com/in/dylan-nguyen-43014190/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
+                    <a href="https://media-exp1.licdn.com/dms/image/C4D03AQGBcVn0HTPL7g/profile-displayphoto-shrink_800_800/0/1639121815247?e=1658966400&v=beta&t=56Aq8Z1uP5pREMsiaanwiUnuGS_VWWYGn42Q_jlMqLc" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
                 </div>
             </div>
         </div>
