--- a/babefertilitysoftware.html
+++ b/babefertilitysoftware.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Babe Fertility Software</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+  <link rel="icon" type="image/png" href="images/trafore-favicon.png">
   <meta name="description" content="Babe Fertility Software">
   <link rel="icon" type="image/png" href="images/babe-favicon.png">
   <meta name="keywords" content="fertility treatment, medical software">
