--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=3" />
+        <link rel="icon" type="image/png" href="images/trafore-favicon.png">
         <link rel="stylesheet" href="stylesheet.css" />
         <link rel="stylesheet" href="txtfile-style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
