update link to babe website

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                         <li><a href="aboutus.html">About us</a></li>
                         <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
-                                <li><a href="babefertilitysoftware.html">Babe ART</a></li>
+                                <li><a href="https://babe.trafore.com/">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                                 <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
                             </ul>
@@ -76,7 +76,7 @@
                                 <textarea class="form-field" placeholder="Your message*" maxlength="5000" id="message" required></textarea>
                                 <p style="color: red; font-style: italic; font-size: 11px;">* required fields</p>
                             </form>
-                            <button value="Send Message" class="submit-button" onclick="submitForm()">Send Message</button>
+                            <button action="https://exim.trafore.com/exim2/contact_us.php" value="Send Message" class="submit-button" onclick="submitForm()">Send Message</button>
                             <div class="success" id="success">Your message has been sent succesfully!</div>
                             <div class="fail" id="fail">Please fill in required fields</div>
                         </div>
@@ -114,7 +114,7 @@
             <div class="column3">
                 <ul class="col-service">
                     <li class="column-title">IT-Services</li>
-                    <li class="col-links"><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
+                    <li class="col-links"><a href="https://babe.trafore.com/">Babe Fertility Software</a></li>
                     <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                     <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                 </ul>
