--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <li><a href="aboutus.html">About us</a></li>
                         <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                         <ul class="dropdown">
-                                <li><a href="babefertilitysoftware.html">Babe ART</a></li>
+                                <li><a href="https://babe.trafore.com/">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                                 <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
                             </ul> 
@@ -108,7 +108,7 @@
                 <div class="babe-txt">
                     <h3>Babe Fertility Software</h3>
                     <p>Since 2010, we have been colaborating with the sole owner and the main brains behind Babe - the art Fertility Clinic platform, Portuguese Cleodora Lda and Dr. Candido Tomás. Starting from 2022, we take over the administrative actions and seeking possibilities to expand the installation base of Babe outside Finland.</p>
-                    <button class="babe-btn" href="" target="_blank"><span>LEARN MORE</span></button>
+                    <button class="babe-btn" href="https://babe.trafore.com/" target="_blank"><span>LEARN MORE</span></button>
                 </div>
                 <div class="babe-img">
                     <img src="images/babe-logo.png" alt="babe-photo" width="232px">
@@ -153,7 +153,7 @@
             <div class="column3">
                 <ul class="col-service">
                     <li class="column-title">IT-Services</li>
-                    <li class="col-links"><a href="#">Babe Fertility Software</a></li>
+                    <li class="col-links"><a href="https://babe.trafore.com/">Babe Fertility Software</a></li>
                     <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                     <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                 </ul>
