--- a/aboutus.html
+++ b/aboutus.html
@@ -22,7 +22,7 @@
                         <li><a href="aboutus.html">About us</a></li>
                         <li id="vertical-list"><button class="services"><strong>IT-Services</strong></button>
                             <ul class="dropdown">
-                                <li><a href="babefertilitysoftware.html">Babe ART</a></li>
+                                <li><a href="https://babe.trafore.com/">Babe ART</a></li>
                                 <li><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                                 <li><a href="https://us.4d.com/why-4d" target="_blank">4D</a></li>
                             </ul>
@@ -121,7 +121,7 @@
                 <div class="column3">
                     <ul class="col-service">
                         <li class="column-title">IT-Services</li>
-                        <li class="col-links"><a href="babefertilitysoftware.html">Babe Fertility Software</a></li>
+                        <li class="col-links"><a href="https://babe.trafore.com/">Babe Fertility Software</a></li>
                         <li class="col-links"><a href="https://apps.trafore.com/exim2/mainpage" target="_blank">Exim</a></li>
                         <li class="col-links"><a href="https://us.4d.com/why-4d" target="_blank">4D Web Development</a></li>
                     </ul>
