--- a/aboutus.html
+++ b/aboutus.html
@@ -81,7 +81,7 @@
                 <div class="chi">
                     <img class="avatar" src="images/chi-img.jpeg" alt="chi-nguyen">
                     <p><strong>Chi Nguyen</strong><br>
-                    IT & Invoicing Assistant</p>
+                    Junior Front End Developer</p>
                     <a href="https://www.linkedin.com/in/chinguyenlinh98/" target="_blank"><i class="fa fa-linkedin-square" style="font-size:30px"></i></a>
                 </div>
                 <div class="dylan">
